Adjusted hero image and text and fixed the spacing on the titles at mobile sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -831,7 +831,7 @@ MEDIA QUERIES
     }
 
     .hero-text h1 {
-        font-size: 6rem;
+        font-size: 4.8rem;
         font-family: 'montserratbold', Arial;
         font-weight: normal;
         letter-spacing: 0;
@@ -849,24 +849,6 @@ MEDIA QUERIES
         height: 70rem;
     }
 
-
-    .cta-wrapper {
-        background-color: #0077A3;
-        width: 130px;
-        height: 24px;
-        font-size: 1.2rem;
-        line-height: 2.3rem;
-        font-family: 'montserratlight', Arial;
-        text-transform: uppercase;
-        text-align: center;
-        margin: 2rem 0 0 0;
-    }
-
-    .cta-button:hover {
-        background-color: #DD2365;
-        width: 130px;
-        height: 24px;
-    }
 
     .projectssectionheader {
         margin-bottom: 0rem;
@@ -930,6 +912,8 @@ MEDIA QUERIES
         height: 45rem;
     }
 
+
+
 	.topsection {
 	    font-size: 4.5rem;
         padding-top: 3rem;
@@ -940,17 +924,35 @@ MEDIA QUERIES
     }
 
     .hero-text h1 {
-        font-size: 2.4rem;
+        font-size: 3.0rem;
         font-family: 'montserratbold', Arial;
         font-weight: normal;
         letter-spacing: 0;
     }
 
     .hero-text h3 {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         font-family: 'montserratlight', Arial;
         font-weight: 100;
         letter-spacing: 0;
+    }
+
+    .cta-wrapper {
+        background-color: #0077A3;
+        width: 130px;
+        height: 24px;
+        font-size: 1.2rem;
+        line-height: 2.3rem;
+        font-family: 'montserratlight', Arial;
+        text-transform: uppercase;
+        text-align: center;
+        margin: 2rem 0 0 0;
+    }
+
+    .cta-button:hover {
+        background-color: #DD2365;
+        width: 130px;
+        height: 24px;
     }
 
     .aboutmewide {
@@ -1015,7 +1017,7 @@ MEDIA QUERIES
 
     .topsection {
         padding: 20px 0;
-        background-image: url(../img/scarf_tall.jpg);
+        background-image: url(../img/scarf_crop.jpg);
         background-size: cover;
     }
 
